@@ -1,1 +1,4 @@
 # proxycorn
+running:
+
+java -Djava.library.path="~/Desktop/plugins/*.jar" --module-path /home/bleh/TOOLS/javafx-sdk-11.0.2/lib/ --add-modules=javafx.fxml,javafx.controls -jar proxycorn-1.0-jar-with-dependencies.jar
